Refactor social links in index.html

--- a/index.html
+++ b/index.html
@@ -9,39 +9,36 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Mooshieblob</title>
-      <link rel="stylesheet" href="assets/css/style.css" />
-    </head>
-    <body class="back-row-toggle splat-toggle">
-      <div class="clock" id="clock"></div>
-      <div class="social-links">
-        <img
-          src="assets/images/bloblogo.webp"
-          alt=""
-          style="height: 15vw; width: auto"
-        />
-        <div
-          style="display: flex; justify-content: center; align-items: center"
-        >
-          <a
-            href="https://safe.aibooru.online/posts?tags=user%3ABlob"
-            target="_blank"
-          >
-            <img src="assets/icons/aibooru.svg" alt="AIBooru" />
-          </a>
-          <a href="https://x.com/mooshieblob" target="_blank">
-            <img src="assets/icons/x.svg" alt="X" style="height: 36px" />
-          </a>
-          <a href="https://github.com/Mooshieblob1/" target="_blank">
-            <img src="assets/icons/github.svg" alt="Github" />
-          </a>
+        <title>Mooshieblob</title>
+        <link rel="stylesheet" href="assets/css/style.css" />
+      </head>
+      <body class="back-row-toggle splat-toggle">
+        <div class="clock" id="clock"></div>
+        <div class="social-links">
+          <img
+            src="assets/images/bloblogo.webp"
+            alt=""
+            class="social-logo"
+          />
+          <div class="social-icons">
+            <a
+              href="https://safe.aibooru.online/posts?tags=user%3ABlob"
+              target="_blank"
+              rel="noopener"
+            >
+              <img src="assets/icons/aibooru.svg" alt="AIBooru" />
+            </a>
+            <a href="https://x.com/mooshieblob" target="_blank" rel="noopener">
+              <img src="assets/icons/x.svg" alt="X" class="social-icon" />
+            </a>
+            <a href="https://github.com/Mooshieblob1/" target="_blank" rel="noopener">
+              <img src="assets/icons/github.svg" alt="Github" class="social-icon" />
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="rain front-row"></div>
-      <div class="rain back-row"></div>
-      <img src="assets/images/bg.webp" id="bg_girl" />
+        <div class="rain front-row"></div>
+        <div class="rain back-row"></div>
+        <img src="assets/images/bg.webp" id="bg_girl" alt="Background Image" />
       <footer>
         <div class="footer-text">
           <span>&copy; 2024 Mooshieblob</span>
