--- a/index.html
+++ b/index.html
@@ -10,97 +10,98 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Mooshieblob</title>
-      <link rel="stylesheet" href="assets/css/style.css" />
-    </head>
-    <body class="back-row-toggle splat-toggle">
-      <nav class="bg-transparent p-4 fixed top-0 right-0 w-full">
-        <div class="container mx-auto flex justify-end items-center">
-          <a
-            href="https://blog.mooshieblob.com"
-            class="text-white hover:text-gray-400 hover:text-xl hover:font-bold transition duration-300"
-          >
-            Blog
-          </a>
-        </div>
-      </nav>
-      <div class="clock" id="clock"></div>
-      <div class="social-links flex flex-col items-center">
-        <img src="assets/images/bloblogo.webp" alt="" class="social-logo" />
-        <div class="social-icons">
-          <a
-            href="https://safe.aibooru.online/posts?tags=user%3ABlob"
-            target="_blank"
-            rel="noopener"
-          >
-            <img src="assets/icons/aibooru.svg" alt="AIBooru" />
-          </a>
-          <a href="https://x.com/mooshieblob" target="_blank" rel="noopener">
-            <img src="assets/icons/x.svg" alt="X" class="social-icon" />
-          </a>
-          <a
-            href="https://github.com/Mooshieblob1/"
-            target="_blank"
-            rel="noopener"
-          >
-            <img
-              src="assets/icons/github.svg"
-              alt="Github"
-              class="social-icon"
-            />
-          </a>
-        </div>
+  <body class="back-row-toggle splat-toggle">
+    <nav class="bg-transparent p-4 fixed top-0 right-0 w-full">
+      <div class="container mx-auto flex justify-end items-center">
+        <a
+          href="https://blog.mooshieblob.com"
+          class="text-white hover:text-gray-400 hover:text-xl hover:font-bold transition duration-300"
+        >
+          Blog
+        </a>
       </div>
-      <div class="rain front-row"></div>
-      <div class="rain back-row"></div>
-      <img src="assets/images/bg.webp" id="bg_girl" alt="Background Image" />
-      <footer>
-        <div class="footer-text">
-          <span>&copy; 2024 Mooshieblob</span>
-          <a
-            href="https://iplocation.io/ipv6-compatibility-checker?url=referer"
-            id="ipv6"
-          >
-            <img
-              src="https://iplocation.io/images/ipv6-non-validated.svg"
-              alt="ipv6 ready"
-              title="ipv6 ready"
-              border="0"
-              padding="0"
-              width="36"
-              height="18"
-            />
-          </a>
-        </div>
-      </footer>
-      <script>
-        function updateClock() {
-          var now = new Date();
-          var hours = now.getHours();
-          var minutes = now.getMinutes();
-          var seconds = now.getSeconds();
-          var timeString =
-            hours.toString().padStart(2, "0") +
-            ":" +
-            minutes.toString().padStart(2, "0") +
-            ":" +
-            seconds.toString().padStart(2, "0");
-          document.getElementById("clock").textContent = timeString;
-        }
+    </nav>
+    <div class="clock" id="clock"></div>
+    <div class="social-links flex">
+      <img src="assets/images/bloblogo.webp" alt="" class="social-logo" />
+      <div class="social-icons flex">
+        <a
+          href="https://safe.aibooru.online/posts?tags=user%3ABlob"
+          target="_blank"
+          rel="noopener"
+          class="mr-2"
+        >
+          <img
+            src="assets/icons/aibooru.svg"
+            alt="AIBooru"
+            class="social-icon"
+          />
+        </a>
+        <a
+          href="https://x.com/mooshieblob"
+          target="_blank"
+          rel="noopener"
+          class="mr-2"
+        >
+          <img src="assets/icons/x.svg" alt="X" class="social-icon" />
+        </a>
+        <a
+          href="https://github.com/Mooshieblob1/"
+          target="_blank"
+          rel="noopener"
+          class="mr-2"
+        >
+          <img src="assets/icons/github.svg" alt="Github" class="social-icon" />
+        </a>
+      </div>
+    </div>
+    <div class="rain front-row"></div>
+    <div class="rain back-row"></div>
+    <img src="assets/images/bg.webp" id="bg_girl" alt="Background Image" />
+    <footer>
+      <div class="footer-text">
+        <span>&copy; 2024 Mooshieblob</span>
+        <a
+          href="https://iplocation.io/ipv6-compatibility-checker?url=referer"
+          id="ipv6"
+        >
+          <img
+            src="https://iplocation.io/images/ipv6-non-validated.svg"
+            alt="ipv6 ready"
+            title="ipv6 ready"
+            border="0"
+            padding="0"
+            width="36"
+            height="18"
+          />
+        </a>
+      </div>
+    </footer>
+    <script>
+      function updateClock() {
+        var now = new Date();
+        var hours = now.getHours();
+        var minutes = now.getMinutes();
+        var seconds = now.getSeconds();
+        var timeString =
+          hours.toString().padStart(2, "0") +
+          ":" +
+          minutes.toString().padStart(2, "0") +
+          ":" +
+          seconds.toString().padStart(2, "0");
+        document.getElementById("clock").textContent = timeString;
+      }
 
-        setInterval(updateClock, 1000);
-      </script>
-      <script
-        src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-        crossorigin="anonymous"
-      ></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/js/script.js"></script>
-    </body>
-  </html>
+      setInterval(updateClock, 1000);
+    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
