Refactor viewport meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mooshieblob</title>
     <link href="./output.css" rel="stylesheet" />
     <!-- Tailwind CSS CDN -->
@@ -59,7 +59,7 @@
     </div>
     <div class="rain front-row"></div>
     <div class="rain back-row"></div>
-    <img src="assets/images/bg.webp" id="bg_girl" alt="Background Image" />
+    <img src="assets/images/bg.webp" id="bg_girl" alt="Background Image" class="h-4 md:h-6 lg:h-9 w-auto" />
     <footer>
       <div class="footer-text">
         <span>&copy; 2024 Mooshieblob</span>
